# django-geographical-module

./: .gitignore  MANIFEST.in  README.rst  pytest.ini  requirements.txt  setup.cfg
geographical_module/: apps.py  tests.py  utils.py
geographical_module/fixtures/: nuts.yaml
geographical_module/management/commands/: load_geo_records.py  load_initial_data.py  load_initial_nuts_data.py  load_nuts_postcode_records.py
geographical_module/migrations/: 0001_initial.py  0002_alter_geography_unique_together_geography_continent_and_more.py  0003_add_italian_province_code.py
geographical_module/models/: __init__.py  geography.py
geographical_module/nuts/: pc2020_AT_NUTS-2021_v1.0.csv  pc2020_BE_NUTS-2021_v1.0.csv  pc2020_CY_NUTS-2021_v1.0.csv  pc2020_DK_NUTS-2021_v1.0.csv  pc2020_EE_NUTS-2021_v1.0.csv  pc2020_ES_NUTS-2021_v1.0.csv  pc2020_FI_NUTS-2021_v1.0.csv  pc2020_IS_NUTS-2021_v1.0.csv  pc2020_IT_NUTS-2021_v1.0.csv  pc2020_LI_NUTS-2021_v1.0.csv  pc2020_LV_NUTS-2021_v1.0.csv  pc2020_RO_NUTS-2021_v2.0.csv  pc2020_RS_NUTS-2021_v1.0.csv  pc2020_SI_NUTS-2021_v1.0.csv  pc2020_UK_NUTS-2021_v.3.0.csv
geographical_module/scripts/: cons.py  nuts.csv  nuts_formating.py  nuts_postcode.py  utils.py
geographical_module/scripts/nuts_postcode_csvs/: pc2020_BG_NUTS-2021_v1.0.csv  pc2020_CH_NUTS-2021_v1.0.csv  pc2020_CZ_NUTS-2021_v1.0.csv  pc2020_DE_NUTS-2021_v3.0.csv  pc2020_EL_NUTS-2021_v1.0.csv  pc2020_FR_NUTS-2021_v1.0.csv  pc2020_HR_NUTS-2021_v1.0.csv  (+12 more)
tests/: conftest.py  fixtures.py  model_validation_tests.py  requirements.txt  settings.py  test_models.py
