[metadata]
name = django_geographical_module
version = 0.1.0
description = A Django app that helps managing geographical information in multiple levels, in a standardized way across countries/continents etc.
long_description = file: README.rst
url = https://github.com/CardoAI/django-geographical-module
author = Kristi Kotini, Elivjo Xhafi
author_email = hello@cardoai.com
license = MIT (X11)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django
    pandas
    PyYAML
    django-model-utils
